--- a/src/app/pages/empresa/empresa-detail/empresa-detail.component.html
+++ b/src/app/pages/empresa/empresa-detail/empresa-detail.component.html
@@ -36,15 +36,15 @@
                     <div>
                         <p class="text-sm text-gray-400 font-medium">Nome da Empresa</p>
                         <p class="text-lg text-gray-100">
-                            {{empresa.nome}}
+                            {{empresa.nome}} {{empresa.sociedadeComercial.nome}}
                         </p>
                     </div>
-                    <div>
+                    <!-- <div>
                         <p class="text-sm text-gray-400 font-medium">Tipo Propetário</p>
                         <p class="text-lg text-gray-100">
                             {{empresa.tipoPropriedade}}
                         </p>
-                    </div>
+                    </div> -->
                     <div>
                         <p class="text-sm text-gray-400 font-medium">Dimensão</p>
                         <p class="text-lg text-gray-100">
@@ -110,9 +110,134 @@
                         </p>
                     </div>
                     <div>
+                        <p class="text-sm text-gray-400 font-medium">Longitude - Latitude</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.longitude}} - {{empresa.latitude}}
+                        </p>
+                    </div>
+                    <div>
                         <p class="text-sm text-gray-400 font-medium">Telefone/Telemóvel</p>
                         <p class="text-lg text-gray-100">
                             {{empresa.telefone}} / {{empresa.telemovel}}
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="bg-gray-800 p-8 rounded-2xl shadow-lg mb-8">
+                <div class="flex items-center mb-6">
+                    <i class="bi bi-person-gear text-emerald-400 text-3xl mr-3"></i>
+                    <h2 class="text-2xl font-semibold text-gray-200">Gerente</h2>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-6">
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Nome</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.gerente.nome}}
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Telefone</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.gerente.telefone}}
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Email</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.gerente.email}}
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Documento de Identificaçåo</p>
+                        <p class="text-lg text-gray-100">{{empresa.gerente.tipoDocumento.replace('_',' ')|titlecase}} –
+                            {{empresa.gerente.numeroDocumento}}</p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Endereço</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.gerente.morada.local}} <br>
+                            {{empresa.gerente.morada.aldeia.nome}},
+                            {{empresa.gerente.morada.aldeia.suco.nome}},
+                            {{empresa.gerente.morada.aldeia.suco.postoAdministrativo.nome}},
+                            {{empresa.gerente.morada.aldeia.suco.postoAdministrativo.municipio.nome}}
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="bg-gray-800 p-8 rounded-2xl shadow-lg mb-8">
+                <div class="flex items-center mb-6">
+                    <i class="bi bi-person-badge text-emerald-400 text-3xl mr-3"></i>
+                    <h2 class="text-2xl font-semibold text-gray-200">Representante</h2>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-6">
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Nome</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.representante.nome}}
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Pai</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.representante.pai}}
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Mãe</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.representante.mae}}
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Data de Nascimento</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.representante.dataNascimento | date: 'dd MMM yyyy'}}
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Estado Civil</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.representante.estadoCivil}}
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Nacionalidade</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.representante.nacionalidade}}
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Naturalidade</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.representante.naturalidade}}
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Telefone</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.representante.telefone}}
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Email</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.representante.email}}
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Documento de Identificaçåo</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.representante.tipoDocumento.replace('_',' ')|titlecase}} –
+                            {{empresa.representante.numeroDocumento}}</p>
+                    </div>
+                    <div>
+                        <p class="text-sm text-gray-400 font-medium">Endereço</p>
+                        <p class="text-lg text-gray-100">
+                            {{empresa.representante.morada.local}} <br>
+                            {{empresa.representante.morada.aldeia.nome}},
+                            {{empresa.representante.morada.aldeia.suco.nome}},
+                            {{empresa.representante.morada.aldeia.suco.postoAdministrativo.nome}},
+                            {{empresa.representante.morada.aldeia.suco.postoAdministrativo.municipio.nome}}
                         </p>
                     </div>
                 </div>
