--- a/src/app/pages/application-management/application-atividade-detail/pdf/pedido-pdf/pedido-pdf.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pdf/pedido-pdf/pedido-pdf.component.html
@@ -89,7 +89,7 @@
                             <span class="font-semibold w-6">d)</span>
                             <label>Tipo Atividade/<span class="italic">Tipu atividade</span></label>
                             <span class="font-bold ml-6">
-                                {{pedido.tipoAtividade.codigo}} - {{pedido.tipoAtividade.descricao}}
+                                {{pedido.classeAtividade.codigo}} - {{pedido.classeAtividade.descricao}}
                             </span>
                         </div>
                         <div class="flex items-center space-x-2">
@@ -181,7 +181,7 @@
                         <div class="flex items-center">
                             <label class="w-32">Estado civil/<span class="italic">Estadu sivíl</span></label>
                             <span class="font-bold ml-6">
-                                <!-- {{pedido.gerente.maritalStatus}} -->
+                                {{pedido.gerente.estadoCivil}}
                             </span>
                         </div>
                         <div class="flex items-center">
